--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### logs ###
+*.log
+
 ### properties ###
 application-local.properties
 application-online.properties
