터미널에 인공지능 답변기능 도입
아직 검색이나 답변이 시원찮음

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,16 @@ spring.servlet.multipart.maxFileSize=1MB
 spring.servlet.multipart.maxRequestSize=1MB
 
 server.port=8082
+
+# Gemini assistant
+sc1hub.assistant.enabled=true
+sc1hub.assistant.requireLogin=false
+sc1hub.assistant.maxRelatedPosts=3
+sc1hub.assistant.contextPosts=3
+sc1hub.assistant.perBoardLimit=5
+sc1hub.assistant.anonymousDailyLimit=3
+sc1hub.assistant.memberDailyLimit=10
+sc1hub.assistant.adminUnlimited=true
+sc1hub.assistant.adminId=admin
+sc1hub.assistant.adminGrade=3
+sc1hub.gemini.model=gemini-2.5-flash-lite
