검색 증강 생성 적용
제미나이 검색 능력을 강화하기 위해 도입함.
새벽5시 자동 업데이트.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ build/
 ### logs ###
 *.log
 
+### assistant local data ###
+data/assistant/
+
 ### properties ###
 application-local.properties
 application-online.properties
