--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,15 @@ sc1hub.assistant.adminUnlimited=true
 sc1hub.assistant.adminId=admin
 sc1hub.assistant.adminGrade=3
 sc1hub.gemini.model=gemini-2.5-flash-lite
+sc1hub.gemini.embeddingModel=text-embedding-004
+
+# RAG (local file-based index)
+sc1hub.assistant.rag.enabled=false
+sc1hub.assistant.rag.indexPath=data/assistant/rag-index.json
+sc1hub.assistant.rag.maxPostsPerBoard=1000
+sc1hub.assistant.rag.chunkSizeChars=900
+sc1hub.assistant.rag.chunkOverlapChars=150
+sc1hub.assistant.rag.searchTopChunks=12
+sc1hub.assistant.rag.autoUpdate.enabled=false
+sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
+sc1hub.assistant.rag.autoUpdate.zone=
