터미널ai 적용해서 호스팅 업데이트 완료
호스팅하고 rag 직접 적용.
관련 공지글 작성 및 라이센스 업데이트(부트스트랩 삭제) 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 logging.level.com.sc1hub=DEBUG
 
 #load properteis
-spring.profiles.include=local
+spring.profiles.include=online
+
 #upload option
 spring.servlet.multipart.maxFileSize=1MB
 spring.servlet.multipart.maxRequestSize=1MB
@@ -35,7 +36,7 @@ sc1hub.gemini.model=gemini-2.5-flash-lite
 sc1hub.gemini.embeddingModel=text-embedding-004
 
 # RAG (local file-based index)
-sc1hub.assistant.rag.enabled=false
+sc1hub.assistant.rag.enabled=true
 sc1hub.assistant.rag.indexPath=data/assistant/rag-index.json
 sc1hub.assistant.rag.maxPostsPerBoard=1000
 sc1hub.assistant.rag.chunkSizeChars=900
