--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.sc1hub'
-version = '1.0.111-SNAPSHOT'
+version = '1.0.114-SNAPSHOT'
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
@@ -29,6 +29,7 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	runtimeOnly 'mysql:mysql-connector-java'
 	providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
