최신글, 댓글 버그, 모바일편의성 수정 완료
db수정에 따른 오류 수정했음.
모바일 환경에서 압축버튼 적용 완료.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,6 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 #log level
 logging.level.com.sc1hub=DEBUG
 
-#load properteis
-spring.profiles.include=local
-
 #upload option
 spring.servlet.multipart.maxFileSize=1MB
 spring.servlet.multipart.maxRequestSize=1MB
@@ -45,3 +42,6 @@ sc1hub.assistant.rag.searchTopChunks=12
 sc1hub.assistant.rag.autoUpdate.enabled=false
 sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
 sc1hub.assistant.rag.autoUpdate.zone=
+
+#load properteis
+spring.profiles.include=online
