RAG 인덱싱 재설정.
검색이 시원찮아서 재설정해서 인덱싱 연결확인.
문제는 연결 확인했는데 오히려 검색이 더 안되는 느낌.
추후 다른 방식의 시스템을 도입해야 할듯.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ sc1hub.assistant.rag.maxPostsPerBoard=1000
 sc1hub.assistant.rag.chunkSizeChars=900
 sc1hub.assistant.rag.chunkOverlapChars=150
 sc1hub.assistant.rag.searchTopChunks=12
-sc1hub.assistant.rag.autoUpdate.enabled=false
+sc1hub.assistant.rag.autoUpdate.enabled=true
 sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
 sc1hub.assistant.rag.autoUpdate.zone=
 
