인공지능 기능 보강
하이브리드 처리 도입

답변은 발전했는데 뜬금없이 이미지가 제대로 안뜨는 문제발생

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,4 +44,4 @@ sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
 sc1hub.assistant.rag.autoUpdate.zone=
 
 #load properteis
-spring.profiles.include=local
+spring.profiles.include=online
