관리자 모드 보강, 터미널메뉴 수정, 검색성능 향상
관리자 모드 ux 수정 및 회원목록은 최신 가입자 기준으로 정렬
터미널 상단에 도움말 고정시킴
ai검색시 필요한 정보만 보게, 공지나 유머게시판은 검색제외, 종족전 기준으로 관련내용만 조회하게 수정했음.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ sc1hub.assistant.requireLogin=false
 sc1hub.assistant.maxRelatedPosts=3
 sc1hub.assistant.contextPosts=3
 sc1hub.assistant.perBoardLimit=5
+sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard,videolinkboard
 sc1hub.assistant.anonymousDailyLimit=3
 sc1hub.assistant.memberDailyLimit=10
 sc1hub.assistant.adminUnlimited=true
@@ -39,6 +40,8 @@ sc1hub.assistant.rag.maxPostsPerBoard=1000
 sc1hub.assistant.rag.chunkSizeChars=900
 sc1hub.assistant.rag.chunkOverlapChars=150
 sc1hub.assistant.rag.searchTopChunks=12
+sc1hub.assistant.rag.minScore=0.3
+sc1hub.assistant.rag.minScoreRatio=0.7
 sc1hub.assistant.rag.autoUpdate.enabled=true
 sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
 sc1hub.assistant.rag.autoUpdate.zone=
