AI기능 관련 리팩토링
• AI 경로에서 불필요한 DB 검색과 반복 연산을 줄이고, RAG 질의 임베딩/보드 목록 캐시를 추가해 응답 지연과 부하를 낮췄어요. 동작은 유지하면서 “필요할 때만” 키워드 검색을 수행하도록 흐름을 정리했습니다.

  변경 내용과 위치

  - src/main/java/com/sc1hub/assistant/service/AssistantService.java에서 RAG 먼저 시도 → RAG 결과가 충분할 때는 키워드 검색을 생략하도록 흐름을 변경했고, 후보 게시물 점수를 1회 계산해 Top‑K만 유지해 정렬 비용을 줄였습니다. 보드 목록 TTL
    캐시도 추가했습니다.
  - src/main/java/com/sc1hub/assistant/rag/AssistantRagSearchService.java에 질의 임베딩 LRU 캐시를 추가해 동일/유사 질의의 외부 임베딩 호출을 줄였습니다(embeddingModel 포함 key).
  - src/main/java/com/sc1hub/assistant/config/AssistantProperties.java에 보드 목록 캐시 TTL 설정을 추가했습니다.
  - src/main/resources/application.properties에 sc1hub.assistant.boardListCacheSeconds 기본값을 추가했습니다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ sc1hub.assistant.requireLogin=false
 sc1hub.assistant.maxRelatedPosts=3
 sc1hub.assistant.contextPosts=3
 sc1hub.assistant.perBoardLimit=5
+sc1hub.assistant.boardListCacheSeconds=60
 sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard,videolinkboard
 sc1hub.assistant.anonymousDailyLimit=3
 sc1hub.assistant.memberDailyLimit=10
