AI검색 최근 검색어 표시 기능 추가.
터미널 위에 최근 검색어 및 질문 5개 표시하는 기능 추가.
이전에 AI답변에 관련 게시물 링크 기능이 누락되서 다시 복구시켰음.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,10 @@ sc1hub.assistant.contextPosts=3
 sc1hub.assistant.perBoardLimit=5
 sc1hub.assistant.boardListCacheSeconds=60
 sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard,videolinkboard
+sc1hub.assistant.factBoards=tipBoard
+sc1hub.assistant.searchLogLimit=5
+sc1hub.assistant.searchLogRetentionDays=7
+sc1hub.assistant.blockedWords=\uC2DC\uBC1C,\uC528\uBC1C,\u3145\u3142,\uBCD1\uC2E0,\u3142\u3145,\uC886,\uC887,fuck,shit,bitch,asshole
 sc1hub.assistant.anonymousDailyLimit=3
 sc1hub.assistant.memberDailyLimit=10
 sc1hub.assistant.adminUnlimited=true
