AI검색 비속어 필터 적용했음.
최근검색란에 이상한 검색 안 들어가게 예방위한 필터.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,23 @@ sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard
 sc1hub.assistant.factBoards=tipBoard
 sc1hub.assistant.searchLogLimit=5
 sc1hub.assistant.searchLogRetentionDays=7
-sc1hub.assistant.blockedWords=\uC2DC\uBC1C,\uC528\uBC1C,\u3145\u3142,\uBCD1\uC2E0,\u3142\u3145,\uC886,\uC887,fuck,shit,bitch,asshole
+sc1hub.assistant.blockedWords=\
+\uC2DC\uBC1C,\uC528\uBC1C,\u3145\u3142,\u3146\u3142,\uC2DC1\uBC1C,\uC5281\uBC1C,\u3145\u3163\u3142\u314F\u3139,\u3146\u3163\u3142\u314F\u3139,\uC2DC\uBC14\u3139,\uC528\uBC14\u3139,\uC2DC\uBC1C\uB188,\uC2DC\uBC1C\uB144,\uC528\uBC1C\uB188,\uC528\uBC1C\uB144,\
+\uAC1C\uC0C8\uB07C,\uAC1C\uC0C8,\uAC1C\uC0DB,\uAC1C\uC250,\uAC1C\uC0C8\uCEAC,\uAC1C\uC0C8\uAE84,\uC0C8\uB07C,\uC0C8\uAE84,\uC0C8\uCEAC,\
+\uBCD1\uC2E0,\uBE05\uC2E0,\uBE59\uC2E0,\u3142\u3145,\u3144,\uB4F1\uC2E0,\uB610\uB77C\uC774,\uBBF8\uCE5C\uB188,\uBBF8\uCE5C\uB144,\uC815\uC2E0\uBCD1\uC790,\
+\uC9C0\uB784,\u3148\u3139,\uC5FC\uBCD1,\uC5E0\uBCD1,\uC618\uBCD1,\
+\uC886,\uC887,\uC886\uAC19,\uC886\uBC25,\uC886\uB9DD,\uC886\uB410\uB2E4,\uC886\uB410,\
+\uAEBC\uC838,\uB2E5\uCCD0,\uC886\uAE4C,\
+\uC539\uC0C8,\uC539\uC0C8\uB07C,\uC539\uB144,\uC539\uB188,\uC539\uCC3D,\
+\uD6C4\uC7A5,\uAC15\uAC04,\
+fuck,fucking,fuk,fck,shit,sh1t,bitch,biatch,asshole,a$$hole,bastard,motherfucker,mf,cunt,dick,\
+\uC790\uC9C0,\uAF2C\uCD94,\uACE0\uCD94,\u3142\u3148,\u3148\u3148,\uC139\uC2A4,\uC1391\uC2A4,sex,porn,porno,\uC57C\uB3D9,\uD3EC\uB974\uB178,\uB538\uB538\uC774,\uB538\uCE58,\uC790\uC704,\uC815\uC561,\uC0AC\uC815,\
+\uC560\uBBF8,\uC560\uBE44,\uB290\uAE08,\uB290\uAE08\uB9C8,\uB290\uAE08\uBE60,\uB2C8\uC560\uBBF8,\uB2C8\uC560\uBE44,\
+\uC874\uB098,\u3148\u3134,\uC878\uB77C,\u3148\u3134\u3134,\uAC1C\uAC19,\uAC1C\uAC19\uB124,\uAC1C\uAC19\uC740,\
+\uB144,\uB188,\uD2C0\uB531,\uB9D8\uCDA9,\uD55C\uB0A8\uCDA9,\uAE40\uCE58\uB140,\
+\uCD9C\uC7A5\uC548\uB9C8,\uCD9C\uC7A5\uC0F5,\uCD9C\uC7A5\uC0F5,\uCD9C\uC7A5\uC0F5\uD6C4\uAE30,\uCD9C\uC7A5\uC0F5\uAC00\uACA9,\uCD9C\uC7A5\uC0F5\uBB38\uC758,\uCD9C\uC7A5\uC0F5\uBAA8\uC9D1,\uCD9C\uC7A5\uC0F5\uC54C\uBC14,\uC624\uD53C,\uCD9C\uC7A5\uC0F5,\
+\uD1A0\uD1A0,\uC2A4\uD3EC\uCE20\uD1A0\uD1A0,\uC0AC\uC124\uD1A0\uD1A0,\uCE74\uC9C0\uB178,\uBC14\uCE74\uB77C,\uC2AC\uB86F,\uD640\uB364,\uBA39\uD280,\uD658\uC804,\uB864\uB9C1,\uAF41\uBA38\uB2C8,\uAF41\uD3EC\uC778\uD2B8,\
+\uB300\uCD9C,\uBB34\uC9C1\uC790\uB300\uCD9C,\uB2F9\uC77C\uB300\uCD9C,\uC6D4\uBCC0,\uC77C\uC218,\uC0AC\uCC44,\uAC1C\uC778\uB3C8,\uD3F0\uD14C\uD06C,\uC791\uC5C5\uB300\uCD9C
 sc1hub.assistant.anonymousDailyLimit=3
 sc1hub.assistant.memberDailyLimit=10
 sc1hub.assistant.adminUnlimited=true
@@ -52,4 +68,4 @@ sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
 sc1hub.assistant.rag.autoUpdate.zone=
 
 #load properteis
-spring.profiles.include=local
+spring.profiles.include=online
