슬라이드 오작동 수정함. AI 모델 상향조정.
긴제목 슬라이드가 최신글로딩때문에 튀는 현상 수정함.

AI모델을 제미나이3플래시로 수정했음. 근데 답변이 너무 짧게 끊겨서 수정필요

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ sc1hub.assistant.memberDailyLimit=10
 sc1hub.assistant.adminUnlimited=true
 sc1hub.assistant.adminId=admin
 sc1hub.assistant.adminGrade=3
-sc1hub.gemini.model=gemini-2.5-flash-lite
+sc1hub.gemini.model=gemini-3-flash-preview
 sc1hub.gemini.embeddingModel=text-embedding-004
 
 # RAG (local file-based index)
@@ -68,4 +68,4 @@ sc1hub.assistant.rag.autoUpdate.cron=0 0 5 * * *
 sc1hub.assistant.rag.autoUpdate.zone=
 
 #load properteis
-spring.profiles.include=online
+spring.profiles.include=local
