AI답변 대기시 ...점을 로딩표시로 사용
점 3개가 1,2,3 교차로 표시해서 답변 생성 중이라는 것을 알려주게 함.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ sc1hub.assistant.enabled=true
 sc1hub.assistant.requireLogin=false
 sc1hub.assistant.maxRelatedPosts=3
 sc1hub.assistant.contextPosts=3
+sc1hub.gemini.maxOutputTokens=1024
 sc1hub.assistant.perBoardLimit=5
 sc1hub.assistant.boardListCacheSeconds=60
 sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard,videolinkboard
