AI답변 개선+연관글 기능도 개선했음
관련 게시물 1개는 답변 내용 근거. 그리고 나머지는 연관된 게시물로 뜨게함. 테스트 코드 통과 완료.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,26 @@ sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard
 sc1hub.assistant.factBoards=tipBoard
 sc1hub.assistant.searchLogLimit=5
 sc1hub.assistant.searchLogRetentionDays=7
+# Optional PR4 (low-cost): LLM matchup/intent classification and TopN rerank
+# sc1hub.assistant.llmMatchupClassificationEnabled=false
+# sc1hub.assistant.llmMatchupClassificationMaxParserConfidence=0.55
+# sc1hub.assistant.llmMatchupClassificationMinConfidence=0.6
+# sc1hub.assistant.llmMatchupClassificationCacheSeconds=3600
+# sc1hub.assistant.llmMatchupClassificationRateLimitPerMinute=10
+# sc1hub.assistant.llmRerankEnabled=false
+# sc1hub.assistant.llmRerankTopN=20
+# sc1hub.assistant.llmRerankExcerptChars=140
+# sc1hub.assistant.llmRerankCacheSeconds=600
+# sc1hub.assistant.llmRerankRateLimitPerMinute=5
+# Answer-grounded related posts (evidence 1 + supporting up to 2)
+# sc1hub.assistant.relatedCandidatePoolSize=40
+# sc1hub.assistant.relatedPostThreshold=0.35
+# Optional: LLM selection for related posts
+# sc1hub.assistant.llmRelatedPostsEnabled=false
+# sc1hub.assistant.llmRelatedPostsTopN=15
+# sc1hub.assistant.llmRelatedPostsExcerptChars=200
+# sc1hub.assistant.llmRelatedPostsCacheSeconds=600
+# sc1hub.assistant.llmRelatedPostsRateLimitPerMinute=5
 sc1hub.assistant.blockedWords=\
 \uC2DC\uBC1C,\uC528\uBC1C,\u3145\u3142,\u3146\u3142,\uC2DC1\uBC1C,\uC5281\uBC1C,\u3145\u3163\u3142\u314F\u3139,\u3146\u3163\u3142\u314F\u3139,\uC2DC\uBC14\u3139,\uC528\uBC14\u3139,\uC2DC\uBC1C\uB188,\uC2DC\uBC1C\uB144,\uC528\uBC1C\uB188,\uC528\uBC1C\uB144,\
 \uAC1C\uC0C8\uB07C,\uAC1C\uC0C8,\uAC1C\uC0DB,\uAC1C\uC250,\uAC1C\uC0C8\uCEAC,\uAC1C\uC0C8\uAE84,\uC0C8\uB07C,\uC0C8\uAE84,\uC0C8\uCEAC,\
