AI답변 짧게 끊기는 문제 수정.
지금 너무 길게 잡힌 듯하지만, 일단 유지.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,9 @@ sc1hub.assistant.requireLogin=false
 sc1hub.assistant.maxRelatedPosts=3
 sc1hub.assistant.contextPosts=3
 sc1hub.gemini.maxOutputTokens=1024
+sc1hub.assistant.answerMaxSentences=8
+sc1hub.assistant.answerMaxChars=1500
+sc1hub.assistant.answerMaxOutputTokens=2048
 sc1hub.assistant.perBoardLimit=5
 sc1hub.assistant.boardListCacheSeconds=60
 sc1hub.assistant.excludedBoards=funboard,supportboard,noticeboard,promotionboard,videolinkboard
@@ -41,9 +44,8 @@ sc1hub.assistant.searchLogRetentionDays=7
 # sc1hub.assistant.llmRerankExcerptChars=140
 # sc1hub.assistant.llmRerankCacheSeconds=600
 # sc1hub.assistant.llmRerankRateLimitPerMinute=5
-# Answer-grounded related posts (evidence 1 + supporting up to 2)
-# sc1hub.assistant.relatedCandidatePoolSize=40
-# sc1hub.assistant.relatedPostThreshold=0.35
+# Answer-grounded related posts (evidence 1 + supporting up to 2) sc1hub.assistant.relatedCandidatePoolSize=40
+# sc1hub.assistant.relatedPostThreshold=0.25
 # Optional: LLM selection for related posts
 # sc1hub.assistant.llmRelatedPostsEnabled=false
 # sc1hub.assistant.llmRelatedPostsTopN=15
